--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,11 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles-catalog.css">
+  </head>
+  <body>
   <header class="header-main">
     <nav class="navigation-header">
       <a class="navigation-header-logo-link" href="#">
@@ -146,72 +152,80 @@
         </a>
       <ul class="product-list">
         <li class="product-item">
-          <a class="product-card-link" href="#">
-            <img class="product-card-image" src="img/catalog/hotels/amara-resort-spa.jpg" width="300" height="212" alt="скалы каньона">
-            <h3 class="product-card-title">Amara Resort & Spa
-            </h3>
-          </a>
-          <p>Гостиница
-          </p>
-          <p>От 4000 ₽
-          </p>
-          <a class="button button-details" href="#">Подробнее
-          </a>
-          <a class="button button-favourite" href="#">В избранное
-          </a>
-          <p class="rating">Рейтинг: 8,5
-          </p>
+          <div class="product-card">
+            <a class="product-card-link" href="#">
+              <img class="product-card-image" src="img/catalog/hotels/amara-resort-spa.jpg" width="300" height="212" alt="скалы каньона">
+              <h3 class="product-card-title">Amara Resort & Spa
+              </h3>
+            </a>
+            <p>Гостиница
+            </p>
+            <p>От 4000 ₽
+            </p>
+            <a class="button button-details" href="#">Подробнее
+            </a>
+            <a class="button button-favourite" href="#">В избранное
+            </a>
+            <p class="rating">Рейтинг: 8,5
+            </p>
+          </div>
         </li>
         <li class="product-item">
-          <a class="product-card-link" href="#">
-            <img class="product-card-image" src="img/catalog/hotels/villas-at-poco-dablo.jpg" width="300" height="212" alt="скалы каньона" >
-            <h3 class="product-card-title">Villas at Poco Diablo
-            </h3>
-          </a>
-          <p>Гостиница
-          </p>
-          <p>От 5000 ₽
-          </p>
-          <a class="button button-details" href="#">Подробнее
-          </a>
-          <a class="button button-favourite-active" href="#">В избранном
-          </a>
-          <p class="rating">Рейтинг: 9,2
-          </p>
+          <div class="product-card">
+            <a class="product-card-link" href="#">
+              <img class="product-card-image" src="img/catalog/hotels/villas-at-poco-dablo.jpg" width="300" height="212" alt="скалы каньона" >
+              <h3 class="product-card-title">Villas at Poco Diablo
+              </h3>
+            </a>
+            <p>Гостиница
+            </p>
+            <p>От 5000 ₽
+            </p>
+            <a class="button button-details" href="#">Подробнее
+            </a>
+            <a class="button button-favourite-active" href="#">В избранном
+            </a>
+            <p class="rating">Рейтинг: 9,2
+            </p>
+          </div>
         </li>
         <li class="product-item">
-          <a class="product-card-link" href="#">
-            <img class="product-card-image" src="img/catalog/hotels/desert-quail-inn.jpg" width="300" height="212" alt="скалы каньона">
-            <h3 class="product-card-title">Desert Quail Inn
-            </h3>
-          </a>
-          <p>Гостиница
-          </p>
-          <p>От 2500 ₽
-          </p>
-          <a class="button button-details" href="#">Подробнее
-          </a>
-          <a class="button button-favourite" href="#">В избранное
-          </a>
-          <p class="rating">Рейтинг: 6,9
-          </p>
+          <div class="product-card">
+            <a class="product-card-link" href="#">
+              <img class="product-card-image" src="img/catalog/hotels/desert-quail-inn.jpg" width="300" height="212" alt="скалы каньона">
+              <h3 class="product-card-title">Desert Quail Inn
+              </h3>
+            </a>
+            <p>Гостиница
+            </p>
+            <p>От 2500 ₽
+            </p>
+            <a class="button button-details" href="#">Подробнее
+            </a>
+            <a class="button button-favourite" href="#">В избранное
+            </a>
+            <p class="rating">Рейтинг: 6,9
+            </p>
+          </div>
         </li>
         <li class="product-item">
-          <a class="product-card-link" href="#">
-            <img class="product-card-image" src="img/catalog/hotels/greentee-inn.jpg" width="300" height="212" alt="скалы каньона">
-            <h3 class="product-card-title">GreenTree Inn
-            </h3>
-          </a>
-          <p>Гостиница
-          </p>
-          <p>От 1500 ₽
-          </p>
-          <a class="button button-details" href="#">Подробнее
-          </a>
-          <a class="button button-favourite" href="#">В избранное
-          </a>
-          <p class="rating">Рейтинг: 5,0
-          </p>
+          <div class="product-card">
+            <a class="product-card-link" href="#">
+              <img class="product-card-image" src="img/catalog/hotels/greentee-inn.jpg" width="300" height="212" alt="скалы каньона">
+              <h3 class="product-card-title">GreenTree Inn
+              </h3>
+            </a>
+            <p>Гостиница
+            </p>
+            <p>От 1500 ₽
+            </p>
+            <a class="button button-details" href="#">Подробнее
+            </a>
+            <a class="button button-favourite" href="#">В избранное
+            </a>
+            <p class="rating">Рейтинг: 5,0
+            </p>
+          </div>
         </li>
       </ul>
       <ul class="pagination">
