--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
-    <header class="header-main">
+    <header class="index-header">
       <nav class="navigation-header">
         <a class="navigation-header-logo-link" href="#">
           <img class="navigation-header-logo" src="img/logo.svg" alt="логотип города Седона" width="140" height="70.05">
@@ -51,7 +51,7 @@
     </header>
     <main class="main-index">
       <section class="hero">
-        <img class="hero-welcome" src="img/index/hero/welcome.svg" width="458" height="352" alt="">
+        <img class="welcome" src="img/index/hero/welcome.svg" width="458" height="352" alt="">
         <img class="stairs" src="img/index/hero/stairs.svg" width="1200" height="57" alt="">
         <h1 class="visually-hidden">Седона — город в Аризоне
         </h1>
@@ -64,13 +64,13 @@
       <section class="advantages">
       <h2 class="visually-hidden">Преимущества
       </h2>
-      <img class="city" src="img/index/city.jpg" widht="800" height="385" alt="флаг штатов на фоне здания внутри города Седон">
       <ul class="advantages-list">
         <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок
-            </h3>
-            <p>Седона — не аттракцион для туристов, там течёт своя жизнь
-            </p>
+          <img class="city" src="img/index/advantages/city.jpg" widht="800" height="385" alt="флаги штатов на фоне зданий внутри города Седон">
+          <h3 class="advantages-title">Настоящий городок
+          </h3>
+          <p>Седона — не аттракцион для туристов, там течёт своя жизнь
+          </p>
         </li>
         <li class="advantages-item">
           <h3 class="advantages-title">Небольшая площадь
@@ -96,7 +96,7 @@
           <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется
           </p>
         </li>
-    </ul>
+      </ul>
     </section>
     <section class="infrastructure">
       <h2 class="visually-hidden">Инфраструктура
@@ -137,8 +137,7 @@
       <a class="button button-search" href="catalog.html">Поиск гостиницы в Седоне
       </a>
     </section>
-    <section class="subcribe">
-      <img class="subscribe-background" src="img/index/subscribe-background.jpg" width="1200" height="414,86" alt="">
+    <section class="subscribe">
       <h2 class="title subscribe-title">Подпишитесь на рассылку
       </h2>
       <p class="subtitle search-subtitle">Только полезная информация и никакого спама, честное бойскаутское!
@@ -185,7 +184,7 @@
       </section>
       <section class="author">
       <a class="watermark" href="https://htmlacademy.ru">
-        <img class="creator" src="img/HTML Academy.svg" width="114.9" height="32.9" alt="логотип онлайн-школы HTML Academy">
+        <img class="creator" src="img/html-academy.svg" width="114.9" height="32.9" alt="логотип онлайн-школы HTML Academy">
       </a>
       </section>
     </footer>
