Добавляет исправленную стилизацию

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
     <main class="main-index">
       <section class="hero">
         <img class="welcome" src="img/index/hero/welcome.svg" width="458" height="352" alt="">
-        <img class="stairs" src="img/index/hero/stairs.svg" width="1200" height="57" alt="">
         <h1 class="visually-hidden">Седона — город в Аризоне
         </h1>
       </section>
@@ -65,7 +64,7 @@
       <h2 class="visually-hidden">Преимущества
       </h2>
       <ul class="advantages-list">
-        <li class="advantages-item">
+        <li class="blue-advantages-item">
           <img class="city" src="img/index/advantages/city.jpg" widht="800" height="385" alt="флаги штатов на фоне зданий внутри города Седон">
           <h3 class="advantages-title">Настоящий городок
           </h3>
@@ -78,7 +77,7 @@
           <p class="advantages-description">Все достопримечательности находятся очень близко
           </p>
         </li>
-        <li class="advantages-item">
+        <li class="gray-advantages-item">
           <h3 class="advantages-title">Красивая дорога
           </h3>
           <p class="advantages-description">Ехать в Седону из Лас-Вегасе совсем не скучно!
@@ -89,7 +88,7 @@
           <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там
           </p>
         </li>
-        <li class="advantages-item">
+        <li class="blue-advantages-item">
           <img class="devil's bridge" src="img/index/advantages/devils-bridge.jpg" width="800" height="385" alt="мост дьявола">
           <h3 class="advantages-title">Там есть мост дьявола
           </h3>
@@ -99,14 +98,11 @@
       </ul>
     </section>
     <section class="infrastructure">
-      <h2 class="visually-hidden">Инфраструктура
-      </h2>
-      <p class="title infrastructure-title">Приезжайте в Седону отдохнуть в комфорте и уюте!
-      </p>
-      <p class="subtitle infrastructure-subtitle">Опытный персонал и качественное обслуживание!
-      </p>
+      <h2 class="visually-hidden">Инфраструктура</h2>
+      <p class="title infrastructure-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+      <p class="subtitle infrastructure-subtitle">Опытный персонал и качественное обслуживание!</p>
       <ul class="infrastructure-list">
-        <li class="infrastructure-item">
+        <li class="blue-infrastructure-item">
           <img class="infrastructure-image" src="img/index/infrastructure/house.svg" width="75" height="72" alt="">
           <h3 class="infrastructure-title">Жильё
           </h3>
@@ -114,13 +110,13 @@
           </p>
         </li>
         <li class="infrastructure-item">
-          <img class="infrastructure-image" src="img/index/infrastructure/house.svg" width="74" height="70" alt="">
+          <img class="infrastructure-image" src="img/index/infrastructure/food.svg" width="74" height="70" alt="">
           <h3 class="infrastructure-title">Еда
           </h3>
           <p class="infrastructure-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
           </p>
         </li>
-        <li class="infrastructure-item">
+        <li class="blue-infrastructure-item">
           <img class="infrastructure-image" src="img/index/infrastructure/souvenir.svg" width="64" height="76" alt="">
           <h3 class="infrastructure-title">Сувениры
           </h3>
@@ -156,21 +152,21 @@
         </h2>
         <ul class="social-list">
           <li class="social-item">
-            <a class="button button-social" href="#">
+            <a class="social-link" href="#">
               <img class="social-image" src="img/social-media/vkontakte.svg" width="24" height="14" alt="">
               <span class="visually-hidden">Vkontakte
               </span>
             </a>
           </li>
           <li class="social-item">
-            <a class="button button-social" href="#">
+            <a class="social-link" href="#">
               <img class="social-image" src="img/social-media/telegram.svg" width="18" height="15.1" alt="">
               <span class="visually-hidden">Telegram
               </span>
             </a>
           </li>
           <li class="social-item">
-            <a class="button button-social" href="#">
+            <a class="social-link" href="#">
               <img class="social-image" src="img/social-media/youtube.svg" width="22" height="17" alt="">
               <span class="visually-hidden">YouTube
               </span>
