--- a/catalog.html
+++ b/catalog.html
@@ -1,12 +1,12 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
-    <link rel="stylesheet" href="styles/styles-catalog.css">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
-  <header class="header-main">
+  <header class="index-header">
     <nav class="navigation-header">
       <a class="navigation-header-logo-link" href="#">
         <img class="navigation-header-logo" src="img/logo.svg" alt="логотип города Седона" width="140" height="70.05">
@@ -51,14 +51,13 @@
   </header>
     <main class="inner-main">
       <header class="inner-header">
-        <h1 class="inner-header-title">Гостиницы Седона
+        <h1 class="header-title">Гостиницы Седона
         </h1>
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="breadcrumbs-link" href="index.html">
               <img class="breadcrumbs-img" src="img/catalog/home-page.svg" width="12" height="12" alt="возвращение на главную страницу">
-              <span class="visually-hidden">Главная
-              </span>
+              <span class="visually-hidden">Главная</span>
             </a>
           </li>
           <li class="breadcrumbs-item">
@@ -124,7 +123,7 @@
       </form>
       </header>
       <section class="catalog-product">
-        <img src="img/catalog/mark-select.svg" width="11.93px" height="7.02px" alt="">
+        <img src="img/catalog/mark-select.svg" width="11.93" height="7.02" alt="">
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешевые
           </option>
@@ -135,17 +134,17 @@
         </select>
         <p class="result">Найдено гостиниц: 38
         </p>
-        <a class="button button-light-active" href="#">
+        <a class="view-item-active" href="#">
           <img src="img/catalog/card.svg" width="16" height="14" alt="">
           <span class="visually-hidden">Показать карточки
           </span>
         </a>
-        <a class="button button-light" href="#">
+        <a class="view-item" href="#">
           <img src="img/catalog/tile.svg" width="16" height="14" alt="">
           <span class="visually-hidden">Показать плитки
           </span>
         </a>
-        <a class="button button-light" href="#">
+        <a class="view-item" href="#">
           <img src="img/catalog/list.svg" width="16" height="14" alt="">
           <span class="visually-hidden">Показать список
           </span>
@@ -255,15 +254,14 @@
         </li>
       </ul>
       </section>>
-      <section class="subcribe">
+      <section class="subscribe-catalog">
         <h2 class="subscribe-title">Подпишитесь на рассылку
         </h2>
         <p class="search-description">Только полезная информация и никакого спама, честное бойскаутское!
         </p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
           <input class="newsletter-field" placeholder="Ваш e-mail" type="email" name="email">
-          <button class="button button-newsletter" type="submit">Отправить
-          </button>
+          <button class="button button-newsletter" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
@@ -274,21 +272,21 @@
       </h2>
       <ul class="social-list">
         <li class="social-item">
-          <a class="button button-social" href="#">
+          <a class="social-link" href="#">
             <img class="social-image" src="img/social-media/vkontakte.svg" width="24" height="14" alt="">
             <span class="visually-hidden">Vkontakte
             </span>
           </a>
         </li>
         <li class="social-item">
-          <a class="button button-social" href="#">
+          <a class="social-link" href="#">
             <img class="social-image" src="img/social-media/telegram.svg" width="18" height="15.1" alt="">
             <span class="visually-hidden">Telegram
             </span>
           </a>
         </li>
         <li class="social-item">
-          <a class="button button-social" href="#">
+          <a class="social-link" href="#">
             <img class="social-image" src="img/social-media/youtube.svg" width="22" height="17" alt="">
             <span class="visually-hidden">YouTube
             </span>
