--- a/catalog.html
+++ b/catalog.html
@@ -123,6 +123,7 @@
       </form>
       </header>
       <section class="catalog-product">
+        <h2 class="visually-hidden">Гостиницы В Седоне</h2>
         <img src="img/catalog/mark-select.svg" width="11.93" height="7.02" alt="">
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешевые
@@ -229,7 +230,7 @@
       </ul>
       <ul class="pagination">
         <li class="pagination-item">
-          <a class="pagination-link pagination-current">1
+          <a class="pagination-current">1
           </a>
         </li>
         <li class="pagination-item">
@@ -253,7 +254,7 @@
           </a>
         </li>
       </ul>
-      </section>>
+      </section>
       <section class="subscribe-catalog">
         <h2 class="subscribe-title">Подпишитесь на рассылку
         </h2>
