--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         </h1>
       </section>
     <section class="advantages-lead">
-      <h2 class="title advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-      <p class="subtitle advantages-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
+      <h2 class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+      <p class="subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
       </p>
       </section>
       <section class="advantages">
@@ -71,7 +71,7 @@
           <p>Седона — не аттракцион для туристов, там течёт своя жизнь
           </p>
         </li>
-        <li class="advantages-item">
+        <li class="transparent-advantages-item">
           <h3 class="advantages-title">Небольшая площадь
           </h3>
           <p class="advantages-description">Все достопримечательности находятся очень близко
@@ -83,7 +83,7 @@
           <p class="advantages-description">Ехать в Седону из Лас-Вегасе совсем не скучно!
           </p>
         </li>
-        <li class="advantages-item">
+        <li class="transparent-advantages-item">
           <h3 class="advantages-title">Мало туристов</h3>
           <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там
           </p>
@@ -99,8 +99,8 @@
     </section>
     <section class="infrastructure">
       <h2 class="visually-hidden">Инфраструктура</h2>
-      <p class="title infrastructure-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
-      <p class="subtitle infrastructure-subtitle">Опытный персонал и качественное обслуживание!</p>
+      <p class="title">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+      <p class="subtitle">Опытный персонал и качественное обслуживание!</p>
       <ul class="infrastructure-list">
         <li class="blue-infrastructure-item">
           <img class="infrastructure-image" src="img/index/infrastructure/house.svg" width="75" height="72" alt="">
@@ -126,9 +126,9 @@
       </ul>
     </section>
     <section class="search">
-      <h2 class="title search-title">Заинтересовались?
+      <h2 class="title">Заинтересовались?
       </h2>
-      <p class="subtitle search-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
+      <p class="subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне
       </p>
       <a class="button button-search" href="catalog.html">Поиск гостиницы в Седоне
       </a>
@@ -136,7 +136,7 @@
     <section class="subscribe">
       <h2 class="title subscribe-title">Подпишитесь на рассылку
       </h2>
-      <p class="subtitle search-subtitle">Только полезная информация и никакого спама, честное бойскаутское!
+      <p class="subtitle">Только полезная информация и никакого спама, честное бойскаутское!
       </p>
       <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
         <input class="newsletter-field" placeholder="Ваш e-mail" type="email" name="email">
