Исправляет раннюю стилизацию

--- a/catalog.html
+++ b/catalog.html
@@ -228,7 +228,7 @@
           </div>
         </li>
       </ul>
-      <ul class="pagination">
+      <ul class="pagination-list">
         <li class="pagination-item">
           <a class="pagination-current">1
           </a>
