--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <img class="city" src="img/index/advantages/city.jpg" widht="800" height="385" alt="флаги штатов на фоне зданий внутри города Седон">
           <h3 class="advantages-title">Настоящий городок
           </h3>
-          <p>Седона — не аттракцион для туристов, там течёт своя жизнь
+          <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь
           </p>
         </li>
         <li class="transparent-advantages-item">
